openshift-ai-demos/ogx-demos/techmart-customer-service-demo/deployments/pgvector.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgvector
spec:
  selector:
    app: pgvector
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pgvector
spec:
  serviceName: pgvector
  replicas: 1
  selector:
    matchLabels:
      app: pgvector

  template:
    metadata:
      labels:
        app: pgvector

    spec:
      volumes:
        - name: postgres-run
          emptyDir: {}
        - name: data
          emptyDir: {}

      containers:
        - name: postgres
          image: quay.io/vahirwad/techmart:pgvector
          imagePullPolicy: Always

          ports:
            - containerPort: 5432

          resources:
            requests:
              cpu: "500m"
              memory: "1Gi"
            limits:
              cpu: "2"
              memory: "4Gi"

          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data

            - name: postgres-run
              mountPath: /var/run/postgresql

          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - pg_isready -U "$POSTGRES_USER"
            initialDelaySeconds: 30
            periodSeconds: 10

          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - pg_isready -U "$POSTGRES_USER"
            initialDelaySeconds: 10
            periodSeconds: 5
